--- a/css/header.css
+++ b/css/header.css
@@ -64,7 +64,7 @@ body {
     padding-left: 12px
 }
 
-@media screen and (max-width:720px) {
+@media screen and (max-device-width:720px) {
     #header {
         height: 180px
     }
@@ -77,7 +77,7 @@ body {
     }
 }
 
-@media screen and (max-width:480px) {
+@media screen and (max-device-width:480px) {
     #header {
         height: 160px;
     }
@@ -107,7 +107,7 @@ body {
     }
 }
 
-@media screen and (max-width:360px) {
+@media screen and (max-device-width:360px) {
     #header {
         height: 140px;
     }
