--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,21 +17,21 @@
     cursor: pointer;
 }
 
-@media screen and (max-device-width:720px) {
+@media screen and (max-width:720px) {
     #navbar {
         display: inline-grid;
         justify-content: stretch;
     }
 }
 
-@media screen and (max-device-width:480px) {
+@media screen and (max-width:480px) {
     #navbar a {
         font-size: 12px;
         padding: 6px;
     }
 }
 
-@media screen and (max-device-width:480px) {
+@media screen and (max-width:480px) {
     #navbar a {
         font-size: 11px;
         padding: 6px;
