--- a/css/content.css
+++ b/css/content.css
@@ -1,12 +1,14 @@
 #container {
     width: 100%;
-    height: 60vh;
+    height: fit-content;
     background-color: aliceblue;
-    overflow: hidden;
 }
 
 .content {
-    width: 100%;
-    height: 100%;
-    padding: 20px
+    padding: 40px;
+    overflow-x: auto;
+}
+
+#video {
+    display: flex;
 }
