--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,7 @@
 #navbar {
     display: flex;
+    position: sticky;
+    top: 0;
     justify-content: space-between;
     width: 100%;
     background-color: rgb(230, 230, 230);
@@ -9,6 +11,7 @@
     font-size: 16px;
     color: #090066;
     text-align: center;
+    text-decoration: none;
     padding: 10px 7%;
 }
 
