--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,7 @@
-html {
-    height: 100%;
-}
-
 body {
     margin: 0px;
-    min-height: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 #header {
