--- a/css/slider.css
+++ b/css/slider.css
@@ -13,13 +13,10 @@
     display: grid;
     grid-template-columns: repeat(4, 100%);
     height: 100%;
+    width: 100%;
     overflow: scroll;
     scroll-behavior: smooth;
     scrollbar-width: none;
-}
-
-#slider-holder div {
-    padding: 30px;
 }
 
 
