--- a/css/slider.css
+++ b/css/slider.css
@@ -14,9 +14,12 @@
     grid-template-columns: repeat(4, 100%);
     height: 100%;
     width: 100%;
+    margin-top: 10px;
     overflow: scroll;
     scroll-behavior: smooth;
     scrollbar-width: none;
+    border-radius: 14px;
+    box-shadow: -2px 2px 12px rgba(0, 0, 0, 0.2);
 }
 
 
